add redirect paths from wordpress

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ github_username:  jekyll
 markdown: kramdown
 gems:
   - jekyll-feed
+  - jekyll-redirect-from
   - jekyll-sitemap
 exclude:
   - Gemfile
