enable google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ permalink: /:title
 url: "http://baylorrae.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: baylorrae
 github_username:  baylorrae
+google_analytics: true
 
 # Build settings
 markdown: kramdown
